# Casino

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml  start-dev.sh  structure.md
.claude/: settings.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_roulette_game_type.py  bfaac1e87ebc_initial.py  c2d3e4f5a6b7_add_wallet_bonus_tracking.py  d3e4f5a6b7c8_notifications_and_payments.py  e4f5a6b7c8d9_withdrawal_payout_account.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  dto.py  routes_auth.py  routes_config.py  routes_notifications.py  routes_payments.py  routes_roulette.py  routes_sessions.py  routes_wallet.py  ws_poker.py  ws_table.py
backend/app/core/: config.py  limiter.py  logging.py  security.py  table_limits.py  ws_tickets.py
backend/app/db/: __init__.py  models.py  redis_client.py  resilience.py  session.py
backend/app/engine/: __init__.py  blackjack.py  multi_seat.py  poker.py  roulette.py
backend/app/ml_inference/: __init__.py  poker_features.py  poker_policies.py  policies.py  registry.py
backend/app/ml_inference/notebooks/: basicModel.ipynb  counting.ipynb  countingPPO.ipynb
backend/app/schemas/: __init__.py  poker_state.py  table_lobby.py  table_state.py
backend/app/services/: __init__.py  bonus.py  game_round.py  notifications.py  payments.py  payouts.py  poker_round.py  retention.py  wallet.py
backend/tests/: conftest.py  test_bonus_and_difficulty.py  test_engine_blackjack.py  test_engine_poker.py  test_engine_roulette.py  test_health.py  test_ml_policies.py  test_multi_seat.py  test_payments_and_notifications.py  test_poker_policies.py  test_rate_limit.py  test_resilience.py  test_table_limits.py  test_ws_tickets.py
docs/: backend-mvp-architecture.md  next-steps.md
docs/screenshots/: README.md
frontend/: Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json
frontend/src/: App.css  App.tsx
frontend/src/components/: AuthLayout.tsx  ConfettiBurst.tsx  DailyBonusWidget.tsx  DifficultyPicker.tsx  ErrorBoundary.tsx  Footer.tsx  GameCard.tsx  Layout.tsx  LiveTableCard.tsx  Navbar.tsx  NotificationCenter.tsx  PlayingCard.tsx  SeatAvatar.tsx  (+3 more)
presentation/: generate_presentation.py  presentation.html  presentation.pptx
rl_training/: blackjack_env.py  evaluate.py  poker_env.py  train_poker_ppo.py  train_qlearning.py
rl_training/saved_models/: qlearning_blackjack.pkl
(+23 files in other folders)
