[project]
name = "intelligent-casino-backend"
version = "0.1.0"
description = "Backend API for Inteligentne Kasyno (MVP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.15.2",
    "asyncpg==0.30.0",
    "bcrypt==4.3.0",
    "email-validator==2.2.0",
    "fastapi==0.115.12",
    "pydantic-settings==2.8.1",
    "python-jose[cryptography]==3.4.0",
    "redis[hiredis]==5.2.1",
    "sqlalchemy[asyncio]==2.0.40",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "ruff==0.11.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests requiring live Postgres/Redis",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
