[project]
name = "intelligent-casino-backend"
version = "0.1.0"
description = "Backend API for Inteligentne Kasyno (MVP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.15.2",
    "asyncpg==0.30.0",
    "bcrypt==4.3.0",
    "email-validator==2.2.0",
    "fastapi==0.115.12",
    "pydantic-settings==2.8.1",
    "python-jose[cryptography]==3.4.0",
    "redis[hiredis]==5.2.1",
    "sqlalchemy[asyncio]==2.0.40",
    "uvicorn[standard]==0.34.0",
    "pyresilience==0.3.2",
    "slowapi==0.1.9",
    "loguru==0.7.2",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "ruff==0.11.4",
]
# Optional heavy ML runtime for the deep-RL (PPO/DQN) blackjack bots.
# Not installed by default — the app falls back to BasicStrategy when absent.
# Install with: uv sync --group ml
ml = [
    "stable-baselines3==2.8.0",
    "torch==2.7.1",
    "gymnasium==1.2.3",
    "numpy>=2.1,<3",
]
# Optional Stripe runtime for real chip purchases. Without it the payments
# service runs in dev-simulation mode. Install with: uv sync --group payments
payments = [
    "stripe>=9,<12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests requiring live PostgreSQL and Redis (docker compose up)",
]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["app/ml_inference/notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
